--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -72,24 +72,18 @@ legend {
 
 }
 
-/* Font */
-@media (max-width: 767px) { html { font-size: 80%; } }
-@media (max-width: 320px) { html { font-size: 50%; } }
-
-
-
-/* CONTENT */
 html {
     font-size: 62.5%;
     -webkit-overflow-scrolling: auto;
 }
 
+
+/* CONTENT */
 body {
     color: var(--text-default);
     font-size: 2.6rem;
-    line-height: 1.5;
+    line-height: 1.6;
     font-family: var(--text-kr);
-    letter-spacing: -0.025em;
     overflow-wrap: break-word;
     -webkit-text-size-adjust: none;
 }
@@ -97,22 +91,58 @@ body {
 .wrap {
     display: flex;
     flex-direction: column;
-    height: 100vh
+    min-height: 100vh
 }
 
 h2 {
     font-family: var(--text-eng);
-    font-weight: 900;
+    font-weight: 800;
     font-size: 4.8rem;
+    line-height: 1;
 }
+
+p {
+    font-family: var(--text-kr);
+    font-weight: 400;
+}
+
+.mt-4 {margin-top: .4rem !important;}
+.mt-24 {margin-top: 2.4rem !important;}
+.mt-32 {margin-top: 3.2rem !important;}
+.mt-100 {margin-top: 10rem !important;}
+.mt-120 {margin-top: 12rem !important;}
 
 .visual {position: relative; max-height:82rem; padding:3rem 9rem 3rem 9rem;  background-color: #FFF8E6; overflow: hidden;}
 .visual::after {content: ""; position: absolute; bottom: 0; left: 0; right: 0; height: 13.4rem; background: url(/KimHaNa/assets/images/visual_bg.png) 50% bottom no-repeat; background-size: 100% 13.3rem; }
 .visual .visual-img {position: relative; display: flex; justify-content: center; }
 .visual .visual-img img { position: relative; flex: 1; width:100%; max-width: 124.5rem; z-index: 10;}
-.visual .visual-img::after {content: ""; width:100%; height: 100%; position: fixed; top: 0; left:0; background: url(/KimHaNa/assets/images/visual_pattern.png) 50% 0 no-repeat; background-size: 144rem auto;}
+.visual .visual-img::after {content: ""; width:100%; height: 100%; max-height:82rem; position: fixed; top: 0; left:0; background: url(/KimHaNa/assets/images/visual_pattern.png) 50% 0 no-repeat; background-size: 144rem auto;}
 
-.introduction {position: relative; max-width: 144rem; padding: 0 12rem; margin: 0 auto; background-color: #fff;}
+.introduction {position: relative; max-width: 144rem; padding: 0 11rem; margin: 0 auto; background-color: #fff;}
+.introduction .intr02 img {max-width: 85rem; width:100%}
+.introduction .intr03 ul {display: flex; justify-content: space-between;}
+.introduction .intr03 ul li {flex: 1; }
+.introduction .intr03 ul li span {display: block;}
+
+footer {background-color: var(--bg-grey);}
+footer ul {display:flex; max-width: 144rem; margin: 0 auto; padding: 4.8rem 11rem;}
+footer ul li {flex: 0 0 auto;}
+footer ul li + li {margin-left:10rem}
+footer ul span {display: inline-block; margin-left:1.6rem; font-size: 2.4rem;}
+
+/* Media */
+@media (max-width: 1023px) { 
+    html { font-size: 42%; } 
+    .introduction {padding: 0 5.6rem;}
+    footer ul {padding: 4.8rem 5.6rem;}
+}
+@media (max-width: 639px) { 
+    html { font-size: 36%; } 
+    .introduction {padding: 0 3.2rem;}
+    footer ul {padding: 2.4rem 3.2rem; flex-direction: column; align-items: end;}
+    footer ul li {width:35rem}
+}
+
 
 
 
