--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -124,7 +124,7 @@ p {
 .introduction .intr03 ul li {flex: 1; }
 .introduction .intr03 ul li span {display: block;}
 
-footer {background-color: var(--bg-grey);}
+footer {position: relative; background-color: var(--bg-grey);}
 footer ul {display:flex; max-width: 144rem; margin: 0 auto; padding: 4.8rem 11rem;}
 footer ul li {flex: 0 0 auto;}
 footer ul li + li {margin-left:10rem}
@@ -139,7 +139,7 @@ footer ul span {display: inline-block; margin-left:1.6rem; font-size: 2.4rem;}
 @media (max-width: 639px) { 
     html { font-size: 30%; } 
     .visual {padding:3rem 3rem 3rem 3rem;}
-    .visual .visual-img::after {max-height:50rem; background-size: 120rem auto;}
+    .visual .visual-img::after {max-height:50rem; background-size: 100rem auto;}
     .introduction {padding: 0 3.2rem;}
     footer ul {padding: 2.4rem 3.2rem; flex-direction: column; align-items: end;}
     footer ul li {width:35rem}
