--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -111,7 +111,7 @@ p {
 .mt-32 {margin-top: 3.2rem !important;}
 .mt-100 {margin-top: 10rem !important;}
 
-.visual {position: relative; max-height:82rem; padding:3rem 9rem 3rem 9rem;  background-color: #FFF8E6; overflow: hidden;}
+.visual {position: relative; max-height:82rem; padding:3rem 9rem 3rem 9rem;  background-color: #fff6e0; overflow: hidden;}
 .visual::after {content: ""; position: absolute; bottom: 0; left: 0; right: 0; height: 13.4rem; background: url(/KimHaNa/assets/images/visual_bg.png) 50% bottom no-repeat; background-size: 100% 13.3rem; }
 .visual .visual-img {position: relative; display: flex; justify-content: center; }
 .visual .visual-img img { position: relative; flex: 1; width:100%; max-width: 124.5rem; z-index: 10;}
